Ejercicios elementos programa

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 
 05_dia_semana/Ejercicio5/\.idea/workspace\.xml
+
+06_par_impar/\.idea/06_par_impar\.iml
+
+06_par_impar/\.idea/modules\.xml
+
+06_par_impar/\.idea/workspace\.xml
+
+10_temperatura/Ejercicio10/\.idea/workspace\.xml
+
+11_acertar_numero/\.idea/workspace\.xml
+
+12_cambios/Ejercicio 12/\.idea/workspace\.xml
+
+Vuelta2/
+
+Vuelta3/
